# vanier-custom-keyboard-collective

./: .gitignore  README copy.md  README.md  lefthook.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: actions.yml  ci.yml
account/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: account.html  login.html  registration.html  reset_password.html  reset_password_email.txt  reset_password_email_fr.txt  reset_password_submit.html  wishlist.html
cart/: context_processors.py  helpers.py  models.py  session_cart.py  tests.py  urls.py  views.py  webhooks.py
cart/migrations/: 0001_initial.py
cart/templatetags/: currency.py
inventory/: context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
portfolio/: portfolio-img-1.avif  portfolio-img-2.avif  portfolio-img-3.avif  portfolio-img-4.avif  portfolio-img-5.avif  portfolio.json
review/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
review/migrations/: 0001_initial.py
shop/: settings.py  urls.py
static/: style.css
static/account/: account.css  login.css  passwords.css  registration.css  style.css  wishlist.css
static/global/: footer.css  nav.css
static/inventory/: cart.css  checkout.css  index.css  product.css  results.css  style.css
templates/: base.html
templates/partials/: footer.html  nav.html
tests/: conftest.py
tests/api/: test_account_review_api.py  test_cart_api.py  test_catalog_api.py
tests/docs/: README.md
tests/e2e/: test_long_video_flow.py
tests/integration/: test_cart_flow.py
tests/performance/: locustfile.py
tests/smoke/: test_server_health.py
tests/unit/: test_account.py  test_account_views.py  test_cart.py  test_cart_views.py  test_helpers.py  test_inventory.py  test_models_logic.py  test_review.py  test_review_views.py
(+17 files in other folders)
